--- a/about.html
+++ b/about.html
@@ -14,12 +14,7 @@
         <div class="container">
             <div class="navbar-brand">
                 <a href="index.html">
-                    <img 
-                        src="./images/logo.png" 
-                        alt="my portolio logo" 
-                        width="80%"
-                        height="auto"
-                    />           
+                  <p>my logo</p>       
                 </a>
             </div>
             <nav class="navbar">
