--- a/contact.html
+++ b/contact.html
@@ -14,12 +14,7 @@
         <div class="container">
             <div class="navbar-brand">
                 <a href="index.html">
-                    <img 
-                        src="./images/logo.png" 
-                        alt="my portolio logo" 
-                        width="80%"
-                        height="auto"
-                    />           
+                   <p>my logo</p>       
                 </a>
             </div>
             <nav class="navbar">
@@ -32,7 +27,7 @@
                 </ul>
             </nav>
         </div>
-    </header>]
+    </header>
 
     <!-- end nav bar section -->
 
@@ -79,7 +74,8 @@
             <div class="content-map">
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d462119.41074394854!2d66.8258195351357!3d25.19283714304759!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3eb33e06651d4bbf%3A0x9cf92f44555a0c23!2sKarachi%2C%20Karachi%20City%2C%20Sindh%2C%20Pakistan!5e0!3m2!1sen!2s!4v1730626986210!5m2!1sen!2s" width="100%" height="500" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
-    </div>
+        
+        </div>
 </div>
   <!-- secion footer  -->
    <style>
